namespace FactoryMethodPattern.Base;

public class ConcreteProductA : IProduct
{
    public void DoStuff()
    {
        throw new NotImplementedException();
    }
}