namespace FactoryMethodPattern.Base;

public class ConcreteProductB: IProduct
{
    public void DoStuff()
    {
        throw new NotImplementedException();
    }
}