namespace FactoryMethodPattern.Base;

public abstract class Creator
{
    public abstract IProduct SomeOperation();

}