namespace FactoryMethodPattern;

public interface IProduct
{
    public void DoStuff();
}